[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/howToPlayScene.gd" type="Script" id=1]
[ext_resource path="res://Assects/fonts/Greenscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assects/cards/card-2-1.png" type="Texture" id=3]
[ext_resource path="res://Assects/cards/card-1-1.png" type="Texture" id=4]
[ext_resource path="res://Assects/icons/skullIcon.png" type="Texture" id=5]
[ext_resource path="res://Assects/cards/card_back.png" type="Texture" id=6]
[ext_resource path="res://Assects/icons/heart.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 2 )

[node name="howToPlayScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )

[node name="labelTitle" type="Label" parent="background"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.24261
margin_top = -360.647
margin_right = 2.24268
margin_bottom = -291.647
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Algo"
align = 1
valign = 1

[node name="label1" type="Label" parent="background"]
margin_left = 40.0
margin_top = 104.0
margin_right = 381.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label7" type="Label" parent="background"]
margin_left = 502.0
margin_top = 104.0
margin_right = 973.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label8" type="Label" parent="background"]
margin_left = 502.0
margin_top = 221.0
margin_right = 973.0
margin_bottom = 322.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label9" type="Label" parent="background"]
margin_left = 502.0
margin_top = 330.0
margin_right = 894.0
margin_bottom = 400.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label10" type="Label" parent="background"]
margin_left = 502.0
margin_top = 422.0
margin_right = 988.0
margin_bottom = 520.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label11" type="Label" parent="background"]
margin_left = 502.0
margin_top = 516.0
margin_right = 987.0
margin_bottom = 595.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label12" type="Label" parent="background"]
margin_left = 502.0
margin_top = 602.0
margin_right = 987.0
margin_bottom = 633.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label13" type="Label" parent="background"]
margin_left = 502.0
margin_top = 642.0
margin_right = 987.0
margin_bottom = 673.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label2" type="Label" parent="background"]
margin_left = 40.0
margin_top = 272.468
margin_right = 381.0
margin_bottom = 411.468
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label4" type="Label" parent="background"]
margin_left = 40.0
margin_top = 158.0
margin_right = 473.0
margin_bottom = 250.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label3" type="Label" parent="background"]
margin_left = 40.0
margin_top = 397.0
margin_right = 381.0
margin_bottom = 519.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label5" type="Label" parent="background"]
margin_left = 40.0
margin_top = 529.0
margin_right = 339.0
margin_bottom = 601.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="label6" type="Label" parent="background"]
margin_left = 40.0
margin_top = 622.0
margin_right = 226.0
margin_bottom = 694.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Algo"
autowrap = true
clip_text = true

[node name="Card-2-1" type="Sprite" parent="."]
position = Vector2( 425.196, 327.076 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )

[node name="Card-1-1" type="Sprite" parent="."]
position = Vector2( 425.096, 438 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 327.0
margin_top = 502.0
margin_right = 430.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 1 )

[node name="DiscardLogo" type="Sprite" parent="."]
position = Vector2( 376.406, 552.906 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="CardBack" type="Sprite" parent="."]
position = Vector2( 269.633, 652.345 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )

[node name="Heart" type="Sprite" parent="."]
position = Vector2( 959.22, 371.733 )
texture = ExtResource( 7 )

[node name="buttonBack" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "<"
flat = true

[connection signal="pressed" from="buttonBack" to="." method="_on_buttonBack_pressed"]
